--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,6 @@ nexon:
   maple:
     apikey: ${API_KEY}
     id: https://open.api.nexon.com/maplestory/v1/id
+    union: https://open.api.nexon.com/maplestory/v1/user
     ranking: https://open.api.nexon.com/maplestory/v1/ranking
 
