--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	implementation 'com.google.guava:guava:32.1.2-jre'
 }
 
 tasks.named('test') {
